changed styles and added gitignore

--- a/index.html
+++ b/index.html
@@ -101,89 +101,19 @@
               <p class="last-message">Lorem ipsum dolor sit amet</p>
             </div>
           </li>
-
-          <li class="conversation-item">
-            <div class="avatar-container">
-              <img src="https://i.pravatar.cc/150?img=6" alt="Wade Warren" />
-            </div>
-            <div class="conversation-info">
-              <div class="contact-top">
-                <span class="contact-name">Wade Warren</span>
-                <span class="time">5m</span>
-              </div>
-
-              <p class="last-message">Lorem ipsum dolor sit amet</p>
-            </div>
-          </li>
-
-          <li class="conversation-item">
-            <div class="avatar-container">
-              <img src="https://i.pravatar.cc/150?img=4" alt="Eleanor Pena" />
-            </div>
-            <div class="conversation-info">
-              <div class="contact-top">
-                <span class="contact-name">Eleanor Pena</span>
-                <span class="time">5m</span>
-              </div>
-
-              <p class="last-message">Lorem ipsum dolor sit amet</p>
-            </div>
-          </li>
-
-          <li class="conversation-item">
-            <div class="avatar-container">
-              <img src="https://i.pravatar.cc/150?img=4" alt="Eleanor Pena" />
-            </div>
-            <div class="conversation-info">
-              <div class="contact-top">
-                <span class="contact-name">Eleanor Pena</span>
-                <span class="time">5m</span>
-              </div>
-
-              <p class="last-message">Lorem ipsum dolor sit amet</p>
-            </div>
-          </li>
-
-          <li class="conversation-item">
-            <div class="avatar-container">
-              <img src="https://i.pravatar.cc/150?img=4" alt="Eleanor Pena" />
-            </div>
-            <div class="conversation-info">
-              <div class="contact-top">
-                <span class="contact-name">Eleanor Pena</span>
-                <span class="time">5m</span>
-              </div>
-
-              <p class="last-message">Lorem ipsum dolor sit amet</p>
-            </div>
-          </li>
-
-          <li class="conversation-item">
-            <div class="avatar-container">
-              <img src="https://i.pravatar.cc/150?img=4" alt="Eleanor Pena" />
-            </div>
-            <div class="conversation-info">
-              <div class="contact-top">
-                <span class="contact-name">Eleanor Pena</span>
-                <span class="time">5m</span>
-              </div>
-
-              <p class="last-message">Lorem ipsum dolor sit amet</p>
-            </div>
-          </li>
         </ul>
       </aside>
 
       <main class="chat-window">
         <header class="chat-header">
           <div class="active-contact-info">
-            <img
+            <!-- <img
               src="https://i.pravatar.cc/150?img=3"
               alt="Leslie Alexander"
               class="header-avatar"
-            />
+            /> -->
 
-            <h2>Leslie Alexander</h2>
+            <h2>Some Username</h2>
           </div>
           <button class="material-icons more-options">more_vert</button>
         </header>
@@ -191,7 +121,7 @@
         <div class="chat-messages">
           <div class="message-group incoming">
             <img
-              src="https://i.pravatar.cc/150?img=3"
+              src="https://i.pravatar.cc/150?img=16"
               alt="Leslie"
               class="message-avatar"
             />
@@ -204,7 +134,7 @@
                   morbi pharetra. Id tristique mi eget eget tristique orci.
                 </p>
               </div>
-              <span class="message-time">11:11 pm</span>
+              <!-- <span class="message-time">11:11 pm</span> -->
             </div>
           </div>
 
@@ -217,19 +147,23 @@
                   suspendisse.
                 </p>
               </div>
-              <span class="message-time">12:15 pm</span>
+              <!-- <span class="message-time">12:15 pm</span> -->
             </div>
           </div>
         </div>
 
         <footer class="chat-input-area">
           <div class="input-wrapper">
-            <input type="text" placeholder="Write a message..." />
+            <input
+              type="text"
+              placeholder="Write a message..."
+              id="message-input"
+            />
             <div class="input-actions">
               <span class="material-icons action-icon"
                 >sentiment_satisfied_alt</span
               >
-              <button class="send-button">
+              <button type="submit" class="send-button">
                 <span class="material-icons">send</span>
               </button>
             </div>
