--- a/index.html
+++ b/index.html
@@ -13,144 +13,15 @@
 
   <body>
     <div class="app-container">
-      <aside class="sidebar">
-        <div class="sidebar-header">
-          <h1>Chat</h1>
-          <div class="inbox-status">
-            <button class="inbox-main">Inbox</button>
-            <button class="inbox-favs">Favourites</button>
-            <button class="material-icons settings-icon">settings</button>
-          </div>
-        </div>
-
-        <div class="search-bar">
-          <span class="material-icons search-icon">search</span>
-          <input type="text" placeholder="Search..." />
-        </div>
-
-        <ul class="conversation-list">
-          <li class="conversation-item">
-            <div class="avatar-container">
-              <img
-                src="https://i.pravatar.cc/150?img=1"
-                alt="Marvin McKinney"
-              />
-            </div>
-            <div class="conversation-info">
-              <div class="contact-top">
-                <span class="contact-name">Marvin McKinney</span>
-                <span class="time">5m</span>
-              </div>
-              <p class="last-message">Lorem ipsum dolor sit amet</p>
-            </div>
-          </li>
-
-          <li class="conversation-item unread">
-            <div class="avatar-container">
-              <img src="https://i.pravatar.cc/150?img=2" alt="Jacob Jones" />
-            </div>
-            <div class="conversation-info">
-              <div class="contact-top">
-                <span class="contact-name">Jacob Jones</span>
-                <span class="time">5m</span>
-              </div>
-              <p class="last-message">Lorem ipsum dolor sit amet</p>
-            </div>
-          </li>
-
-          <li class="conversation-item active">
-            <div class="avatar-container">
-              <img
-                src="https://i.pravatar.cc/150?img=3"
-                alt="Leslie Alexander"
-              />
-            </div>
-            <div class="conversation-info">
-              <div class="contact-top">
-                <span class="contact-name">Leslie Alexander</span>
-                <span class="time">5m</span>
-              </div>
-              <p class="last-message">Lorem ipsum dolor sit amet</p>
-            </div>
-          </li>
-
-          <li class="conversation-item">
-            <div class="avatar-container">
-              <img src="https://i.pravatar.cc/150?img=4" alt="Eleanor Pena" />
-            </div>
-            <div class="conversation-info">
-              <div class="contact-top">
-                <span class="contact-name">Eleanor Pena</span>
-                <span class="time">5m</span>
-              </div>
-
-              <p class="last-message">Lorem ipsum dolor sit amet</p>
-            </div>
-          </li>
-
-          <li class="conversation-item">
-            <div class="avatar-container">
-              <img src="https://i.pravatar.cc/150?img=5" alt="Kathryn Murphy" />
-            </div>
-            <div class="conversation-info">
-              <div class="contact-top">
-                <span class="contact-name">Kathryn Murphy</span>
-                <span class="time">5m</span>
-              </div>
-
-              <p class="last-message">Lorem ipsum dolor sit amet</p>
-            </div>
-          </li>
-        </ul>
-      </aside>
-
       <main class="chat-window">
         <header class="chat-header">
           <div class="active-contact-info">
-            <!-- <img
-              src="https://i.pravatar.cc/150?img=3"
-              alt="Leslie Alexander"
-              class="header-avatar"
-            /> -->
-
             <h2>Some Username</h2>
           </div>
           <button class="material-icons more-options">more_vert</button>
         </header>
 
-        <div class="chat-messages">
-          <div class="message-group incoming">
-            <img
-              src="https://i.pravatar.cc/150?img=16"
-              alt="Leslie"
-              class="message-avatar"
-            />
-            <div class="message-content">
-              <div class="message-bubble">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Dolor
-                  mollis leo proin turpis eu hac. Tortor dolor eu at bibendum
-                  suspendisse. Feugiat mi eu, rhoncus diam consectetur libero
-                  morbi pharetra. Id tristique mi eget eget tristique orci.
-                </p>
-              </div>
-              <!-- <span class="message-time">11:11 pm</span> -->
-            </div>
-          </div>
-
-          <div class="message-group outgoing">
-            <div class="message-content">
-              <div class="message-bubble">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Dolor
-                  mollis leo proin turpis eu hac. Tortor dolor eu at bibendum
-                  suspendisse.
-                </p>
-              </div>
-              <!-- <span class="message-time">12:15 pm</span> -->
-            </div>
-          </div>
-        </div>
+        <div class="chat-messages"></div>
 
         <footer class="chat-input-area">
           <div class="input-wrapper">
@@ -160,6 +31,10 @@
               id="message-input"
             />
             <div class="input-actions">
+              <div class="emoji-picker" id="emoji-picker" style="display: none">
+                <span>😊</span><span>😂</span><span>❤️</span><span>👍</span
+                ><span>🔥</span>
+              </div>
               <span class="material-icons action-icon"
                 >sentiment_satisfied_alt</span
               >
